DEV-12898 - Move itext renderer to XTRF - windows - resource path fixed part 2